# change-data-capture-demo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
src/: cli.rs  config.rs  connect.rs  event.rs  kafka.rs  lib.rs  search.rs  source.rs
tests/: stale_read_flow.rs
