[package]
name = "change-data-capture-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
opensearch = { version = "2.4.0", default-features = false, features = ["rustls-tls"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
